--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -4814,4 +4814,6 @@
     <string name="RestrictSavingContentDescription">Participants won’t be able to forward messages from this group or save media files.</string>
     <string name="ForwardsRestrictGroup">Forwards from this group\nare restricted.</string>
     <string name="ForwardsRestrictChannel">Forwards from this channel are restricted</string>
+    <string name="SendMessageAs">Send message as…</string>
+    <string name="SendUserPersonalAccount">personal account</string>
 </resources>
